--- a/Makefile.all.am
+++ b/Makefile.all.am
@@ -126,7 +126,8 @@ AM_CPPFLAGS_@VGCONF_PLATFORM_PRI_CAPS@ = \
 
 AM_CXXFLAGS_@VGCONF_PLATFORM_PRI_CAPS@ = \
   -fno-exceptions \
-  -fno-rtti
+  -fno-rtti \
+  -fno-stack-protector
 
 if VGCONF_HAVE_PLATFORM_SEC
 AM_CPPFLAGS_@VGCONF_PLATFORM_SEC_CAPS@ = \
@@ -140,7 +141,8 @@ AM_CPPFLAGS_@VGCONF_PLATFORM_SEC_CAPS@ = \
 
 AM_CXXFLAGS_@VGCONF_PLATFORM_SEC_CAPS@ = \
   -fno-exceptions \
-  -fno-rtti
+  -fno-rtti \
+  -fno-stack-protector
 endif
 
 AM_FLAG_M3264_X86_LINUX   = @FLAG_M32@
