--- a/Makefile.tool.am
+++ b/Makefile.tool.am
@@ -29,7 +29,7 @@ endif
 
 TOOL_LDFLAGS_COMMON_LINUX = -static \
 	-Wl,-defsym,valt_load_address=@VALT_LOAD_ADDRESS@ \
-	-nodefaultlibs -nostartfiles -u _start -fno-exceptions -fno-rtti
+	-nodefaultlibs -nostartfiles -u _start -fno-exceptions -fno-rtti -fnostack-protector
 TOOL_LDFLAGS_COMMON_AIX5 = -static -Wl,-e_start_valgrind
 TOOL_LDFLAGS_COMMON_DARWIN = -nodefaultlibs -nostartfiles \
 	-Wl,-u,__start -Wl,-e,__start -Wl,-bind_at_load /usr/lib/dyld
